fix : fix error in API

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
           placeholder="Please type words to Translate"
         ></textarea>
         <button class="translateButton">Translate</button>
+        <div class="errormsg"></div>
         <div class="translatedTextArea">
           Translated Text will Appear Here ...
         </div>
